fix: ensures header z-index, sets smooth scroll behavior

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,10 @@
   margin: 0;
 }
 
-html { height: 100%; }
+html { 
+  height: 100%;
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: var(--font-montserrat);
