--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,4 +5,5 @@
   padding: 0 50px;
   flex-grow: 0;
   flex-shrink: 0;
+  z-index: 1;
 }
